cli/tests/snapshots/dev_config__wukong_dev_config_diff_for_wukong_toml_success.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
[36mcomparing local config vs remote config...[39m

[2m.wukong.toml[0m
1        |-test=true
    1    |+test=false


