cli/tests/snapshots/dev_config__wukong_dev_config_diff_when_no_changes_found.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
[36mcomparing local config vs remote config...[39m
The config file is already up to date with the remote.

