cli/tests/snapshots/dev_config__wukong_dev_config_diff_when_secret_file_not_found.snap
---
source: cli/tests/dev_config.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---
'[36mconfig/c.secret.exs[39m' not found.
[33mA new release of wukong is available:[39m [36m2.0.0-alpha2[39m [36m→[39m [36m2.0.1[39m
To upgrade, run: brew update && brew upgrade wukong
[33mhttps://api.github.com/repos/mindvalley/wukong-cli/releases/128072901[39m

