cli/tests/snapshots/dev_config__wukong_dev_config_pull_for_wukong_toml_success.snap
---
source: cli/tests/dev_config.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---

🔍 1 annotation(s) found in [TEMP_DIR]/.wukong.toml
	[32mCreated[39m [TEMP_DIR]/.env
[33mA new release of wukong is available:[39m [36m2.0.0-alpha2[39m [36m→[39m [36m2.0.1[39m
To upgrade, run: brew update && brew upgrade wukong
[33mhttps://api.github.com/repos/mindvalley/wukong-cli/releases/128072901[39m

